# ahash-cxx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Hashes.h  KeysetTest.cpp  PMP_Multilinear.h  README.md  main.cpp  shell.nix
.github/workflows/: aarch64-asimd.yml  aarch64-sve.yml  aarch64.yml  cmake.yml
ahash-cxx/: CMakeLists.txt
ahash-cxx/include/ahash-cxx/: ahash-cxx.h  common.h  hasher.h
ahash-cxx/include/ahash-cxx/arch/: asimd.h  config.h  ssse3.h  sve.h  vaes.h
ahash-cxx/src/: ahash-cxx.cpp  shuffle-test.cpp
include/ahash-cxx/: ahash-cxx.h  common.h  hasher.h
include/ahash-cxx/arch/: asimd.h  config.h  ssse3.h  sve.h  vaes.h
src/: ahash-cxx.cpp  extra-info-test.cpp  shuffle-test.cpp  stability-test.cpp
